--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,4 +31,6 @@ jobs:
       - run: npm install yarn -g
 
       - name: Test
-        run: yarn install
+        run: |
+          yarn install
+          yarn build
